# cbc_module_1

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  Makefile  README.md  generate_version_information.cmake  git-commit-info.cmake  gnu-arm-none-eabi.toolchain.cmake
ci/: Dockerfile  build-docker-image
documentation/: cbc-firmware.md  developer-doc.md
firmware/: CMakeLists.txt  STM32H743ZI_FLASH.ld
firmware/RTE/: CMakeLists.txt  RTE.ioc  STM32H743ZITx_FLASH.ld
firmware/RTE/Inc/: spi.h  stm32h7xx_hal_conf.h
firmware/RTE/Src/: adc.c  dac.c  gpio.c  main.c  spi.c  stm32h7xx_it.c  tim.c
firmware/application/: CMakeLists.txt  actors.cpp  actors.h  application.cpp  application.h  version.h
firmware/components/CtrlLoop/: CMakeLists.txt  ctrlLoop.cpp  ctrlLoop.hpp
firmware/components/DDS/: CMakeLists.txt  dds.cpp  dds.hpp  sinusLUT.cpp  sinusLUT.hpp
firmware/components/FIR/: CMakeLists.txt  fir.cpp  fir.hpp
firmware/components/LockIn/: CMakeLists.txt  lockIn.cpp  lockIn.hpp
firmware/drivers/peripherals/: CMakeLists.txt  peripherals.cpp  peripherals.hpp
firmware/hal/: CMakeLists.txt  adc.cpp  adc.hpp  spi.cpp  spi.hpp
firmware/support/: hard_fault_handler.c  hard_fault_handler.h  syscalls.c
